--- a/about.html
+++ b/about.html
@@ -12,8 +12,12 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+     <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="gallery-style.css" />
-    <title>AMIMUN '21</title>
+    <title>AMIMUN '21 | About</title>
   </head>
   <body>
     <!-- navbar -->
@@ -281,7 +285,7 @@
           <div class="col-md-5">
             <img
               class="d-block img-fluid"
-              src="./static/DSC_4294-min.JPG"
+              src="./static/WA_1-min.jpg"
               alt=""
             />
           </div>
