--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -12,13 +12,17 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+     <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="./gallery-style.css" />
     <style>
       * {
         text-align: left;
       }
     </style>
-    <title>AMIMUN '21</title>
+    <title>AMIMUN '21 | Committees</title>
   </head>
   <body>
     <!-- navbar -->
@@ -317,7 +321,6 @@
           </div>
         </div>
       </div>
-      <hr class="featurette-divider" />
     </main>
     <!-- FOOTER -->
     <footer class="container mt-5">
