--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="./gallery-style.css" />
-    <title>AMIMUN '21</title>
+    <title>AMIMUN '21 | Contact</title>
   </head>
   <body>
     <!-- navbar -->
