--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>AMIMUN '21</title>
+    <title>AMIMUN '21 | Home</title>
   </head>
   <body>
     <!-- navbar -->
@@ -251,8 +251,17 @@
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
-      <div class="container marketing">
-        <h1 class="m-5 text-center">MESSAGE FROM SECRETARY GENERAL</h1>
+      <div class="container marketing mt-5">
+        <div
+            class="p-5 mt-5 m-5 mx-auto text-grey rounded"
+            style="background-color: #f5a98c"
+          >
+            <div class="px-0">
+              <h1 class="display-4 font-italic">
+                Message from Secretary General
+              </h1>
+            </div>
+          </div>
         <div class="mt-5 bg-light">
           <div
             class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-lg h-md-250 position-relative"
@@ -318,15 +327,27 @@
         <!-- START THE FEATURETTES -->
         <div class="container marketing mt-5">
           <!-- START THE FEATURETTES -->
-          <h1 class="m-5 text-center">MESSAGE</h1>
+          <div
+            class="p-5 m-5 my-5 mx-auto text-grey rounded"
+            style="background-color: #f5a98c"
+          >
+            <div class="px-0">
+              <h1 class="display-4 font-italic">
+                Message from Patron-in-Chief
+              </h1>
+            </div>
+          </div>
           <hr class="featurette-divider mt-5" />
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
-                Dr. Ashok
+                Dr. Ashok K.
                 <span class="text-muted">Chauhan</span>
               </h2>
-              <h5>Founder</h5>
+              <h5>
+                Founder President, Ritnand Balved Education Foundation (RBEF),
+                Chairman, AKC Group of Companies
+              </h5>
               <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5">
@@ -342,7 +363,10 @@
                 Dr. Atul
                 <span class="text-muted">Chauhan</span>
               </h2>
-              <h5>Chancellor</h5>
+              <h5>
+                Dr. Atul Chauhan, Chancellor, Amity University, President, RBEF
+                and Patron-in-Chief
+              </h5>
               <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5 order-md-1">
@@ -359,10 +383,10 @@
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
-                Dr. Balvinder
+                Prof. (Dr.) Balvinder
                 <span class="text-muted">Shukla</span>
               </h2>
-              <h5>Vice Chancellor</h5>
+              <h5>Vice Chancellor, AUUP and Patron</h5>
               <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5">
@@ -376,7 +400,7 @@
                 Dr. Alpana
                 <span class="text-muted">Kakar</span>
               </h2>
-              <h5>DSW</h5>
+              <h5>Dy.DSW AUUP-Mentor</h5>
               <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5 order-md-1">
@@ -388,10 +412,10 @@
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
-                Dr. Naitasha
+                Dr. Nitasha
                 <span class="text-muted">Hasteer</span>
               </h2>
-              <h5>[ENTER ROLE]</h5>
+              <h5>Organising Committee Lead</h5>
               <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5">
