--- a/messages/org-com.html
+++ b/messages/org-com.html
@@ -18,7 +18,7 @@
     />
 
     <link rel="stylesheet" href="../gallery-style.css" />
-    <title>AMIMUN '21</title>
+    <title>AMIMUN '21 | Team</title>
   </head>
   <body>
     <!-- navbar -->
