--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -12,8 +12,12 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+     <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="../gallery-style.css" />
-    <title>AMIMUN '21</title>
+    <title>AMIMUN '21 | Register</title>
   </head>
   <body>
     <!-- navbar -->
