--- a/delegates/ctc.html
+++ b/delegates/ctc.html
@@ -12,6 +12,10 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+     <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="../gallery-style.css" />
     <title>AMIMUN '21</title>
   </head>
@@ -169,7 +173,6 @@
           </div>
         </div>
 
-        <hr class="featurette-divider" />
 
         <!-- /END THE FEATURETTES -->
       </div>
