--- a/gallery.html
+++ b/gallery.html
@@ -12,10 +12,14 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+     <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- <link rel="stylesheet" href="style.css" /> -->
     <link rel="stylesheet" href="gallery-style.css" />
-    <title>AMIMUN '21</title>
+    <title>AMIMUN '21 | Gallery</title>
   </head>
   <body>
     <!-- navbar -->
