removed scroll bar

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -24,7 +24,7 @@
     </style>
     <title>AMIMUN '21 | Committees</title>
   </head>
-  <body>
+  <body class="example">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
