--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./style.css" />
     <title>AMIMUN '21 | Home</title>
   </head>
-  <body>
+  <body class="example">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
