--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./gallery-style.css" />
     <title>AMIMUN '21 | Contact</title>
   </head>
-  <body>
+  <body class="example">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
