--- a/delegates/hrc.html
+++ b/delegates/hrc.html
@@ -23,7 +23,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand mx-1" href="index.html"
+        <a class="navbar-brand mx-1" href="../index.html"
           ><img src="../static/logo-main.svg" width="55px" alt=""
         /></a>
         <button
