--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="gallery-style.css" />
     <title>AMIMUN '21 | Gallery</title>
   </head>
-  <body>
+  <body class="example">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
