--- a/messages/sec.html
+++ b/messages/sec.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="../gallery-style.css" />
     <title>AMIMUN '21 | Team</title>
   </head>
-  <body>
-    <!-- navbar -->
+  <body class="example">
+  <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="../index.html"
