--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -17,6 +17,10 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>AMIMUN '21 | Home</title>
   </head>
   <body class="example">
@@ -251,17 +255,17 @@
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
-      <div class="container marketing mt-5">
+      <div class="container marketing mt-5 ">
         <div
-            class="p-5 mt-5 m-5 mx-auto text-grey rounded"
-            style="background-color: #f5a98c"
-          >
-            <div class="px-0">
-              <h1 class="display-4 font-italic">
-                Message from Secretary General
-              </h1>
-            </div>
+          class="p-5 mt-5 m-5 mx-auto text-grey rounded "
+          style="background-color: #f5a98c"
+        >
+          <div class="px-0 ">
+            <h1 class="display-4 font-italic">
+              Message from Secretary General
+            </h1>
           </div>
+        </div>
         <div class="mt-5 bg-light">
           <div
             class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-lg h-md-250 position-relative"
@@ -325,7 +329,7 @@
           </div>
         </div>
         <!-- START THE FEATURETTES -->
-        <div class="container marketing mt-5">
+        <div class="container marketing mt-5 ">
           <!-- START THE FEATURETTES -->
           <div
             class="p-5 m-5 my-5 mx-auto text-grey rounded"
@@ -340,7 +344,7 @@
           <hr class="featurette-divider mt-5" />
           <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading">
+              <h2 class="featurette-heading ">
                 Dr. Ashok K.
                 <span class="text-muted">Chauhan</span>
               </h2>
