--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -255,12 +255,12 @@
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
-      <div class="container marketing mt-5 ">
+      <div class="container marketing mt-5">
         <div
-          class="p-5 mt-5 m-5 mx-auto text-grey rounded "
+          class="p-5 mt-5 m-5 mx-auto text-grey rounded"
           style="background-color: #f5a98c"
         >
-          <div class="px-0 ">
+          <div class="px-0">
             <h1 class="display-4 font-italic">
               Message from Secretary General
             </h1>
@@ -273,63 +273,61 @@
           >
             <div class="col p-4 d-flex flex-column position-static">
               <p class="card-text mb-auto" style="text-align: justify">
-                Dear Delegate, <br />
-                It is an absolute pleasure to invite you to the
-                <strong
-                  >Amity International Model United Nations (AMIMUN'20)</strong
-                >. The 9th edition of the AMIMUN Conference will be held at
-                Amity University, Uttar Pradesh from Friday, January 17th, to
-                Sunday, January 19th, 2020. With each passing edition, AMIMUN
-                has witnessed stratospheric growth, setting the bar for MUNs
-                within the Indian Circuit, and an International Base of
-                participants. By following the theme for AMIMUN'20 "Audere est
-                facere" which is Latin for "To Dare is to Do", we wish to
-                encourage the delegates to engage in debate that is
-                thought-provoking and will yield forth solutions to the pressing
-                issues in the world today. We believe that actions speak louder
-                than words, which is why when one makes bold decisions, the
-                results are electrifying. AMIMUN'20 is not only the perfect
-                place to display your debating and diplomatic prowess but also
-                ignite the zeal to dare and create change. This edition, we as
-                the Secretariat, will ensure your experience isn't just
-                restricted to a committee room but enhances the never-ending
-                process of learning. It is a platform which strives to enable
-                students from all over the world, so they may move towards a
-                future where they are then capable of achieving what others
-                wouldn't dare dream of. I would like to take this opportunity to
-                thank our Founder President Sir, our Faculty Coordinators, our
-                Partners and Sponsors for their relentless support for
-                AMIMUN'20, and making this Conference possible. On behalf of the
-                secretariat, I extend a warm invitation to all delegates and
-                hope this conference will be as productive for you as an
-                individual, as it will be for you as a delegate. For any queries
-                or concerns kindly feel free to reach out to us, we would be
-                glad to assist you. Let's Dare to Do'!
+                Dear Delegate,<br> The world went through an unprecedented time in
+                the history of the human race. Yet, in the midst of uncertainty,
+                I hope that winds of change sweep away with it the misery. 
+                Thus, to remain actuated and go into the correct direction, I
+                invite you to the first edition of online <b>Amity International
+                Model United Nations, (AMIMUN '21)</b> on Saturday, March 20 th
+                to Sunday, March 21 st ,20201. By following the legacy and
+                success of previous editions, AMIMUN has set a bar within the
+                Indian Mun circuit with an International base of participants.
+                The secretariat of AMIMUN’2021 hopes to follow the same path and
+                bring you an unparalleled debating experience while adapting to
+                the current world order. Amity International Model United
+                Nations Conference 2021 is a platform for a boundless learning
+                experience and a place to voice your suppositions, opinions
+                while learning the skills of diplomacy. Through this conference,
+                we wish that you experience the most captivating moments whilst
+                sensitizing yourself with the dynamic changes that the world is
+                going through today and encourage the highest calibre of
+                discussion. We look forward to the fervour and enthusiasm which
+                the delegates will bring with them thereby giving an
+                encompassing comprehensive experience and highlighting issues to
+                deliberate upon for a better future of humankind. I would also
+                like to take this opportunity to thank our Founder President
+                Sir, our Faculty Coordinators, our Partners and Sponsors for
+                their unremitting support for e-AMIMUN&#39;21, and making this
+                conference possible. On behalf of the secretariat, I extend a
+                warm invitation to all delegates and hope this conference will
+                be as productive for you, both as an individual and as a
+                delegate. For any queries or concerns kindly feel free to reach
+                out to us, we would be glad to assist you.
               </p>
 
               <p class="text-muted">
                 <br />
                 Sincerely,<br />
-                Siddhant Treasure<br />
+                Meshuwa K. Mawthoh<br />
                 Secretary-General<br />
                 Amity International Model United Nations 2020
               </p>
               <div class="mt-1">
-                <button
-                  type="button"
+                <a
+                  href="./about.html"
                   class="btn btn-sm btn-outline-secondary rounded"
                 >
                   Read more
-                </button>
+                </a>
               </div>
             </div>
             <div class="img-fluid col-auto d-none d-lg-block p-3 rounded">
-              <img class="rounded" src="./static/sg.jpg" alt="" />
+              <img class="rounded" src="./static/mesh.jpeg" alt="" />
             </div>
           </div>
         </div>
         <!-- START THE FEATURETTES -->
-        <div class="container marketing mt-5 ">
+        <div class="container marketing mt-5">
           <!-- START THE FEATURETTES -->
           <div
             class="p-5 m-5 my-5 mx-auto text-grey rounded"
@@ -344,7 +342,7 @@
           <hr class="featurette-divider mt-5" />
           <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading ">
+              <h2 class="featurette-heading">
                 Dr. Ashok K.
                 <span class="text-muted">Chauhan</span>
               </h2>
