updated written content

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
-     <link
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
@@ -131,25 +131,24 @@
             Amity International Model United Nations
           </h1>
           <p class="lead my-3">
-            Amity International Model United Nations is a simulation of the
-            United Nations spanning over three days. At AMIMUN, delegates gain
-            in-depth knowledge of diplomacy, international relations, and the
-            inner workings of the United Nations. Currently, in it's Ninth
-            Edition, AMIMUN has set a certain standard for the conduct of MUNs
-            throughout the Nation with its innovative themes, focus on pertinent
-            issues and stellar level of debate. Through debating issues that
-            confront world leaders and drafting resolutions, one can enhance
-            their critical thinking, public speaking and leadership skills.
-            Moreover, the combination of the depth of research required and the
-            understanding one must-have of others' views and attitudes, due to
-            the interactions with multitudes of other young minds from various
-            backgrounds, give the students a deep insight into the real-world
-            problems. They then become aware of the causes of conflict between
-            nations which leads them to a better understanding of the interests
-            and motivations of others. Thus, AMIMUN follows through with the
-            Preamble to the Charter of the United Nations: " To practise
-            tolerance and live together in peace with one another as good
-            neighbours " .
+            The first online edition of Amity International Model United Nations
+            is a simulation of the United Nations spanning over two days. At
+            AMIMUN, delegates gain in-depth knowledge of diplomacy,
+            international relations, and the inner workings of the United
+            Nations. Through the past Nine Editions, AMIMUN has set a standard
+            of MUNs throughout the Nation with its innovative themes, by keeping
+            the focus on pertinent issues and stellar level of debate. To
+            continue the same legacy, the first online edition of AMIMUN will
+            create a platform where deliberation on issues that address global
+            problems and drafting resolutions, will enhance critical thinking,
+            public speaking, and leadership skills. The combination of in-depth
+            research and the understanding of others' opinions from interactions
+            among multitudes of other young minds from various backgrounds,
+            gives the delegates a deeper insight into the real-world problems.
+            They also become aware of the causes of conflict between nations.
+            Thus, AMIMUN follows through with the Preamble to the Charter of the
+            United Nations: "To practice tolerance and live together in peace
+            with one another as good neighbors”
           </p>
         </div>
       </div>
@@ -170,14 +169,13 @@
             </h2>
             <p class="lead">
               The Secretariat of Amity International Model United Nations
-              Conference consists of individuals who have consistently proven
-              themselves to be hardworking and knowledgeable. Each person was
-              handpicked for ensuring AMIMUN's ideals are upheld and executed
-              with the utmost dedication. Time and again they have ensured the
-              smooth running of all the committees, while simultaneously
-              maintaining the highest level of hospitality. Thus, we know our
-              promise of quality will be diligently followed, guaranteeing an
-              enriching experience for all who attend.
+              Conference consists of people who have consistently proven
+              themselves as hardworking, committed, and knowledgeable. Each
+              person is selected for ensuring AMIMUN's ideals are upheld and
+              executed with the utmost dedication. The secretariat ensures the
+              smooth running of all the committees while maintaining the highest
+              level of hospitality. Thus, we remain committed to the promise of
+              quality and guarantee an enriching experience.
             </p>
           </div>
           <div class="col-md-5">
@@ -194,16 +192,16 @@
               <span class="text-muted">Platform</span>
             </h2>
             <p class="lead">
-              Amity is made up of a multitude of people, from various
-              backgrounds, interact and work with one another. AMIMUN takes
-              advantage of this, allowing for a huge international platform,
-              where ideas can be propagated, opinions formed, and views widened.
-              Past editions of AMIMUN have been conducted in association with
-              international bodies like the United Nations Information Centre
-              for India and Bhutan (UNIC), Medecins Sans Frontieres, and Amnesty
-              International India, and included delegates and dignitaries from
-              Europe. AMIMUN truly is the best place to not only to showcase
-              one's talent but further grow as a delegate and an individual.
+              Amity University takes the honor of being an institute where
+              several people, from various backgrounds, interact and work with
+              one another. AMIMUN staying on the same ideal has created an
+              international platform, where ideas, opinions, and views are
+              propagated. The same is corroborated by international delegations
+              and past collaborations with organizations such as the United
+              Nations Information Centre for India and Bhutan, Amnesty
+              International, and Doctors Without Borders, to effectively impart
+              the knowledge of global affairs, diplomacy, and international
+              policy to the students and to add authenticity to the experience.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -253,12 +251,11 @@
               <span class="text-muted">Up Ingenuity</span>
             </h2>
             <p class="lead">
-              As the 9th edition approaches, the excellence of AMIMUN enhances.
-              It provides with finest delegates to keep up with the competition.
-              Moreover, this will develop and enhance skills to negotiate,
-              articulate and market ideas. AMIMUN will foster the critical and
-              analytical thought process to spontaneously come up with solutions
-              to some grave world problems.
+              In the past nine editions, AMIMUN has effectively created a
+              platform where delegates have had the option to master and refine
+              their strategy abilities. The online version of AMIMUN will
+              encourage the basic and substitute manner of thinking to
+              unexpectedly create answers for some grave world issues.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -274,20 +271,15 @@
               Engaging <span class="text-muted">& Paramount Motions</span>
             </h2>
             <p class="lead">
-              The dedicated AMIMUN fraternity will bring forth the most engaging
-              motions aimed to facilitate the highest quality of debate. It will
-              provide with a truly holistic educational experience and raise
-              awareness. Moreover, the challenging global issues will stretch
-              the general knowledge of the participants while, sensitising them
-              to the intricate obstacles of being a global leader.
+              The AMIMUN fraternity brings forth the most engaging motions aimed
+              to facilitate the highest quality of debate. Deliberation on
+              challenging global issues will sharpen the members with the
+              learnings of the United Nations and assist them with understanding
+              the current world request. .
             </p>
           </div>
           <div class="col-md-5">
-            <img
-              class="d-block img-fluid"
-              src="./static/WA_1-min.jpg"
-              alt=""
-            />
+            <img class="d-block img-fluid" src="./static/WA_1-min.jpg" alt="" />
           </div>
         </div>
 
@@ -299,23 +291,22 @@
         <div class="px-0">
           <h1 class="display-4 font-italic">Amity University</h1>
           <p class="lead my-3">
-            <h4>Our Vision</h4> in Building the country and the general public is through
-            giving collective, coordinated, and trans-social quality teaching
-            and to be the worldwide leader in worth training and supporting
-            ability where Modernity Blends with Tradition.</br>
-            <br>
-            <h4>Our Mission</h4> is to
-            give education at all levels in all panels of current and modern
-            events, developing frontier areas of knowledge, learning, and
-            research and examination to build up the general character of
-            students by making them great experts as well as great people.
-            Understanding and having respect for human qualities, pride in their
-            legacy and culture, a feeling of good and bad, and yearning for
-            perfection and imbibe attributes of the courage of conviction and
-            action.
+            <b>Our Vision</b> in Building the country and the general public is
+            through giving collective, coordinated, and trans-social quality
+            teaching and to be the worldwide leader in worth training and
+            supporting ability where Modernity Blends with Tradition.
+            <b>Our Mission</b> is to give education at all levels in all panels
+            of current and modern events, developing frontier areas of
+            knowledge, learning, and research and examination to build up the
+            general character of students by making them great experts as well
+            as great people. Understanding and having respect for human
+            qualities, pride in their legacy and culture, a feeling of good and
+            bad, and yearning for perfection and imbibe attributes of the
+            courage of conviction and action.
           </p>
         </div>
       </div>
+
       <div class="container marketing mt-5">
         <!-- START THE FEATURETTES -->
 
@@ -334,7 +325,11 @@
             </p>
           </div>
           <div class="col-md-5">
-            <img class="d-block img-fluid" src="./static/Wide 1-min.JPG" alt="" />
+            <img
+              class="d-block img-fluid"
+              src="./static/Wide 1-min.JPG"
+              alt=""
+            />
           </div>
         </div>
 
@@ -398,7 +393,11 @@
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="d-block img-fluid" src="./static/DSC_4103-min.JPG" alt="" />
+            <img
+              class="d-block img-fluid"
+              src="./static/DSC_4103-min.JPG"
+              alt=""
+            />
           </div>
         </div>
 
@@ -439,7 +438,11 @@
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="d-block img-fluid" src="./static/DSC_4197-min.JPG" alt="" />
+            <img
+              class="d-block img-fluid"
+              src="./static/DSC_4197-min.JPG"
+              alt=""
+            />
           </div>
         </div>
 
@@ -477,7 +480,11 @@
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="d-block img-fluid" src="./static/DSC_0106-min.JPG" alt="" />
+            <img
+              class="d-block img-fluid"
+              src="./static/DSC_0106-min.JPG"
+              alt=""
+            />
           </div>
         </div>
         <!-- /END THE FEATURETTES -->
@@ -499,12 +506,16 @@
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
+                <a
+                  href="https://instagram.com/amimun21?igshid=ndh9t257dsh"
+                  class="social-link"
                   ><i class="fa fa-instagram"></i
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
+                <a
+                  href="https://www.linkedin.com/company/amimunconference/"
+                  class="social-link"
                   ><i class="fa fa-linkedin"></i
                 ></a>
               </li></ul
