--- a/index.html
+++ b/index.html
@@ -273,36 +273,38 @@
           >
             <div class="col p-4 d-flex flex-column position-static">
               <p class="card-text mb-auto" style="text-align: justify">
-                Dear Delegate,<br> The world went through an unprecedented time in
-                the history of the human race. Yet, in the midst of uncertainty,
-                I hope that winds of change sweep away with it the misery. 
-                Thus, to remain actuated and go into the correct direction, I
-                invite you to the first edition of online <b>Amity International
-                Model United Nations, (AMIMUN '21)</b> on Saturday, March 20 th
-                to Sunday, March 21 st ,20201. By following the legacy and
-                success of previous editions, AMIMUN has set a bar within the
-                Indian Mun circuit with an International base of participants.
-                The secretariat of AMIMUN’2021 hopes to follow the same path and
-                bring you an unparalleled debating experience while adapting to
-                the current world order. Amity International Model United
-                Nations Conference 2021 is a platform for a boundless learning
-                experience and a place to voice your suppositions, opinions
-                while learning the skills of diplomacy. Through this conference,
-                we wish that you experience the most captivating moments whilst
-                sensitizing yourself with the dynamic changes that the world is
-                going through today and encourage the highest calibre of
-                discussion. We look forward to the fervour and enthusiasm which
-                the delegates will bring with them thereby giving an
-                encompassing comprehensive experience and highlighting issues to
-                deliberate upon for a better future of humankind. I would also
-                like to take this opportunity to thank our Founder President
-                Sir, our Faculty Coordinators, our Partners and Sponsors for
-                their unremitting support for e-AMIMUN&#39;21, and making this
-                conference possible. On behalf of the secretariat, I extend a
-                warm invitation to all delegates and hope this conference will
-                be as productive for you, both as an individual and as a
-                delegate. For any queries or concerns kindly feel free to reach
-                out to us, we would be glad to assist you.
+                Dear Delegate,<br />
+                The world went through an unprecedented time in the history of
+                the human race. Yet, in the midst of uncertainty, I hope that
+                winds of change sweep away with it the misery.  Thus, to remain
+                actuated and go into the correct direction, I invite you to the
+                first edition of online
+                <b>Amity International Model United Nations, (AMIMUN '21)</b> on
+                Saturday, March 20 th to Sunday, March 21 st ,20201. By
+                following the legacy and success of previous editions, AMIMUN
+                has set a bar within the Indian Mun circuit with an
+                International base of participants. The secretariat of
+                AMIMUN’2021 hopes to follow the same path and bring you an
+                unparalleled debating experience while adapting to the current
+                world order. Amity International Model United Nations Conference
+                2021 is a platform for a boundless learning experience and a
+                place to voice your suppositions, opinions while learning the
+                skills of diplomacy. Through this conference, we wish that you
+                experience the most captivating moments whilst sensitizing
+                yourself with the dynamic changes that the world is going
+                through today and encourage the highest calibre of discussion.
+                We look forward to the fervour and enthusiasm which the
+                delegates will bring with them thereby giving an encompassing
+                comprehensive experience and highlighting issues to deliberate
+                upon for a better future of humankind. I would also like to take
+                this opportunity to thank our Founder President Sir, our Faculty
+                Coordinators, our Partners and Sponsors for their unremitting
+                support for e-AMIMUN&#39;21, and making this conference
+                possible. On behalf of the secretariat, I extend a warm
+                invitation to all delegates and hope this conference will be as
+                productive for you, both as an individual and as a delegate. For
+                any queries or concerns kindly feel free to reach out to us, we
+                would be glad to assist you.
               </p>
 
               <p class="text-muted">
@@ -341,7 +343,8 @@
           </div>
           <hr class="featurette-divider mt-5" />
           <div class="row featurette">
-            <div class="col-md-7">
+            <h3 class="text-center">Coming Soon..</h3>
+            <!-- <div class="col-md-7">
               <h2 class="featurette-heading">
                 Dr. Ashok K.
                 <span class="text-muted">Chauhan</span>
@@ -354,10 +357,10 @@
             </div>
             <div class="col-md-5">
               <img class="d-block img-fluid" src="./static/ashok.jpg" alt="" />
-            </div>
+            </div> -->
           </div>
 
-          <hr class="featurette-divider" />
+          <!-- <hr class="featurette-divider" />
 
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
@@ -380,8 +383,8 @@
             </div>
           </div>
 
-          <hr class="featurette-divider" />
-
+          <hr class="featurette-divider" /> -->
+          <!-- 
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
@@ -408,9 +411,9 @@
             <div class="col-md-5 order-md-1">
               <img class="d-block img-fluid" src="./static/0921_P.png" alt="" />
             </div>
-          </div>
+          </div> -->
 
-          <hr class="featurette-divider" />
+          <!-- <hr class="featurette-divider" />
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
@@ -426,11 +429,20 @@
           </div>
         </div>
 
-        <hr class="featurette-divider" />
+        <hr class="featurette-divider" /> -->
         <!-- /END THE FEATURETTES -->
 
         <!-- Three columns of text below the carousel -->
-        <h1 class="m-5 text-center">OUR COLLABORATIONS</h1>
+        <div
+            class="p-5 m-5 my-5 mx-auto text-grey rounded"
+            style="background-color: #f5a98c"
+          >
+            <div class="px-0">
+              <h1 class="display-4 font-italic">
+                Our Collaborations
+              </h1>
+            </div>
+          </div>
         <div class="row text-center m-5">
           <h3>Announcing soon..</h3>
           <div class="col-lg-4">
